# atlas_ops

./: .env.example  .gitignore  Dockerfile  README.md  atlas_ops.yml.example  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
atlas_ops/: README.md  cli.py  config.py  entrypoint.sh  install.py  persistence.py  requirements.txt  server.py
atlas_ops/agent/: collector.py  runner.py
atlas_ops/data/: runbooks.json  signals.json  sites.json
atlas_ops/frontend/: index.html
src/atlas_ops/: __init__.py  cli.py  config.py  executor.py  templates.py
src/atlas_ops/agent/: __init__.py  config.py  runner.py
src/atlas_ops/backend/: __init__.py  config.py  db.py  main.py  routes.py
src/atlas_ops/frontend/: __init__.py  index.html
