[project]
name = "atlas-ops"
version = "0.1.0"
description = "Automation toolkit for orchestrating Atlas operations"
authors = [{name = "Atlas Ops Maintainers"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.3",
    "PyYAML>=6.0.1",
]

[project.urls]
Homepage = "https://example.com/atlas-ops"

[project.scripts]
atlas-ops = "atlas_ops.cli:app"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
